Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -1,1 +1,224 @@
+# Joint All-Domain Operations (INTRO)
 
+## 5 Operational Domains (Space, Cyber, Air, Land, Sea)
+
+Space - Equal to or Greater than 100 Kilometers above the sea level. Airbourne objects become negligible. 
+
+Cyberspace - Global domain consisting of an interdependent network of information technology infrastructures. 
+1) Physical Network Layer - IT Devices 
+2) Logical Network Layer - 
+3) Cyber-persona Layer - How you appear on the cyber network.
+
+Access can be gained through an combination of wired, optical, or wireless means. While some access can be achieved remotely though permissions. There are multiple ways to get access. 
+
+Air 
+
+Land
+
+Sea 
+
+
+## Joint All-Domain Ops 
+
+Integration of all service component and functional component operational structures at local and regional echelons to cordinate and synchronize land, air, maritime, cyber and space operations with ease and to greater extend than currently exist today. Utilizing all domains to gain a physical, psycological, and influence of the operational environment.
+
+## Joint All-Domain Command and Control (JADC2)
+
+## Multi-Domain Task Force (MDTF)
+
+## Multi-Domain Effects Batallion (MDEB)
+Provide near real time signals intelligence (SIGINT), geospatial intelligence (GEOINT), and open source (OSINT) target acquisition and products.
+
+## MEF Information Group (MIG)
+Coordinates, integrates, and employs capabilities for information environment operations in order to ensure the Marine Air Ground Task Force MAGTF Commanders ability to facilitate freindly forces.
+
+## Expeditionary Advanced Base Operations (EABO)
+A form of expeditionary warfare taht involves the employment of movile, low signature, persistent, and relatively easy to maintain and sustain naval expeditionary forces.
+Stand-In Forces
+Mobility
+Persistence 
+Low Signature - Physical and EMS 
+Integrated Naval Forces
+Cost Effective
+
+
+
+# Joint Operations
+## Why a Joint Force?
+Incapable of coordinating land, sea, and air activities across its two military departments (War and Navy)
+Joint Chiefs of Staff (JCS) created in 1942 
+Franklin D Roosevelt created the JCS by executive direction, primarily to work with the british, who had a combined chiefs of staff organization
+
+## National Security ACT 
+1947 created the National Military Establishment (DOD Precursor) 
+Prescribed a weak SECDEF
+Gave legal standing to the Joint Chief Staff but NO chairman
+Continued to empower the Military Department Secretaries as members of both the Cabinet and the new National Security Council (NSC) service domination also continued to trump the authority of unified commanders in the field.
+
+Military Departments retained a de facto role in the operational chain of command and NEVER COMPLIED with the provision of strengthening the unified commanders
+
+                              President  
+                         Secretary of Defense
+
+Joint Chief of staffs                                 / Mil Departments
+Unified Commands
+
+Joint Task Force                                      / Capabilities
+Subordinate Unified Commands   
+
+
+## How did we get here?
+Numerous military failures highlighted institutional deficiencies at ALL levels. The adhoc nature of the joint effort in these operations contributed to an inability to effectively link tactical actions to strategic ends. 
+
+
+## Goldwater-Nichols Act 1986
+IN addition to the impetus provided by these operational failures, several disparate factors came together in the mid 1980s, which enabled DOD organizational changes. These included extensive congressional hearings, a major senate inquiry, bi-partisan, openness to rectify the situation, a presidential commission, and the appointment of a reform-minded CJCS, Admiral William Crowe, in October 1985.
+
+## Forces
+Global Force Management (GFM) is a group of related processes that establish strategic C2 and strategic posture and provide insight to the global military force avalability based on military plans and operations to support DoDs strategic decisions. GFM integrates directed readiness, assignment, allocation, appointment, and assessment processes for force management and planning constructs. 
+
+SECDEF assigns allocates and apportions forces to CCDRs for planning to meet current operational requirements, and to accomplish CCDRs.
+
+## Unified Commands
+Joint commmands are asstablished by missions and responsibilities often based on either a geographic AOR or functions
+
+CCDRs forces can operate wherever they are required to accomplish missions
+
+## Geographic Commands
+AFRICOM
+CENTCOM
+EUCOM
+SPACECOM
+NORTHCOM
+INDOPACOM
+SOUTHCOM
+
+## Functional Commands
+Can work across the Georgraphical Commands
+
+SOCOM
+CYBERCOM
+STRATCOM
+TRANSCOM
+
+
+## Interagency
+The National Archaives Federal Register list 436(438) Federal Agencies, each with their own culture, processes, tactics, techniques, and procedures.
+
+## The power of IA
+
+Title 22 Foreign Relations
+Title 10 Armed Forces
+Title 50 Foreign Intel and Covert Actions
+
+## Joint Operations
+Joint is two or more military department
+Combined is two or more countries 
+
+## Levels of War
+Strategic
+Operational
+Tactical
+
+
+# Information Environment and Operations 
+is the aggregate of social cultureal psychological technical and physical factors that affect how humans and automated systems derive meaning from, and act upon, and are impacted by information, including th einfividuals, organizations, and systems that collect, process, disseminate, or use information.
+
+Informational Aspect
+
+Physical Aspect
+
+Human Aspect
+
+
+Informational aspects reglect the way that individuals, information systems, and group communicate and exchange information. Informational aspects are the sensory inputs of activities that a receiver interprets and uses to assign meaning
+
+Physical aspects are the material characterisics
+
+
+## Operations in the Information Environment (OIE)
+OIE are military actions involving the intergrated employment of mulitple information forces to affect drivers of behavior by informing audiences; influencing foreign relevant actors
+
+## Two Goals
+Informational Advantage - The operational advantage gained through the joint forces use of information for decision making and its ability to leverage information to create effects on the IE
+
+Informational Power - The ability to use information to support achievement of objectives and gain an informational advantage
+
+The elevation of information as a joint function impacts all operations and signals a fundamental appreciation for the military role of information at the strategic, operational, and tactical levels within todays complex OE.
+
+## Assessment
+Assessment of information in joint operations are conducted in accordance with the Operation Assessment Process
+
+## Organizing for OIE
+Information forces, the building bl;ocks of OIE units, are those Active Component and Reserve Component forces specifically organized, trained, and equipped to create and/or support the creation of effects on the IE
+
+## Joint Organizations in OIE
+JIOWC
+JPSE-PA
+JEWC
+JISE
+JIOC
+DMA
+
+## Interagency in OIE
+Effective intregration of the appropriate US government oranizations will enhance the overall sucess of joint force operations. 
+
+## PA
+PA organizations and personnel focus on the OIE core activity of informating domestic, international, and internal audiences. External publics include allies, neutrals, adversaries, and potential adversaries
+
+## CMO
+Civil military operations; activities that establish mainitain and influence and exploit relationships between military forces, indigenous populations
+
+## MISO Military information support operations
+miso are planned operations to convery selected information and indicator to foreign audiences to influence their emotions, motives, objective reasoning, and ultimately the behavior of foreign gov org groups.
+
+## Military Deceptions
+Commands conduct MILDEC to mislead enemy decision makers and commanders and cause them to take or not take specific actions.
+
+## Combat Camera (COMCAM)
+
+## Cyberspace Operations
+CO employ cyberspace capabilities to acheive objectives in or through cyberspace
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ 
