--- a/8. Kahoot.md
+++ b/8. Kahoot.md
@@ -1,1 +1,14 @@
+Group A
+0850224
+07069501
+
+The supported commander has the authority to excersice general direction of supporting effort
+true
+
+Joint operations are military actions conducted by joint forces and services forces is specificed command relationship
+
+
+
+
+
 
