--- a/8. Kahoot.md
+++ b/8. Kahoot.md
@@ -2,13 +2,24 @@ Group A
 0850224
 07069501
 
-The supported commander has the authority to excersice general direction of supporting effort
-true
+What are the 5 operational domains?
+Air land maritime cyberspace space
 
-Joint operations are military actions conducted by joint forces and services forces is specificed command relationship
+What are the 3 layers of Cyber Security?
+Physical network, Logical network, Cyber-persona 
 
+The multi-domain effect batallion provides _, _, _ target acquisition and products?
+SIGINT, GEOINT, OSINT
 
+The _ of 1947....?
+National Security Act 
 
+The supporting commander determines timeing and duration of supporting action.
+FALSE
 
+_ operate across all geographic regions and typically provide support to other combatant commanders?
+Functional Combatant Commands
 
+OIE are cunducted in support to JFC operation and objectives in support of other components of the joint force
+TRUE
 
