Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -181,6 +181,198 @@ Commands conduct MILDEC to mislead enemy decision makers and commanders and caus
 CO employ cyberspace capabilities to acheive objectives in or through cyberspace
 
 
+# EMS / EW 
+
+The electromagnetic spectrum (EMS) is a maneuver space essential for facilitating control within the operational environment (OE) and impacts all portions of OE and military operations.
+
+JWC JOint warfighting concept was developed to address the join forces need to adapt to the changing character of war and geopolitical landscape which requires an integrated and interoperable, multi-domain capable, joint and coalition force to demonstrate credible deterrence. 
+Defend the homeland
+Deter strategic attacks against the U.S. our allies and partners
+Deter aggression while being prepared to prevail in conflict
+Ensure our future military advantage
+
+The NSS is a presidential document providing policy guidance issued through the National Security Council NSC which align and direct the instruments of national power in support of policy objectives.
+
+Joint electromagnetic spectrum operations (JEMSO) are military actions undertaken by a joint force to exploit, attack, protect, and manage the electromagnetic environment.
+
+JEMSO-Related mission areas:
+- Cyberspace Operations (CO)
+- Space Operations - All space operations rely on EMS for command and control (C2), sensing, and information distribution. 
+- Air, Land, and Maritime Operations
+
+The EMS as the range of all types of electromagnetic radiation is a fundamental component of the natural environment and the electromagnetic operational environment (EMOE) is a space in which military functions are performed.
+
+The EMOE is a manuever space, battlespace, place where competition and warfare, as well as commerce and other nonmilitary activities, are conducted.
+
+EMEO Complexity:
+- Contested - Enemy activities detect, disrupt, exploit, degrade, deny, deceive, or destroy freindly EMS copabilities
+
+- Congested - Military civilian EMS dependent systems continue to crowd the spectrum and increase the amount of unintentional interference.
+
+- Constrained - Domestic and international regulations cause the amount of spectrum available for military access to decrease.
+
+Electromagnetic Warfare includes three major subdivisions:
+- Electromagnetic Attack (EA) Destructive (Directed Energy) Non-Destructive (EW Jamming and EM Deception Herding) 
+- Electromagnetic Protection (EP) Protect from friendly EW and enemy EW and Frequency Deconfliction
+- Electromagnetic Support (ES) Direction Finding, Threat Warning, Collections to support EW
+
+Offensive EM:
+Jamming
+Directed energy weapons
+EM Pulse
+Decption
+
+Defensive EM:
+Jamming
+Directed energy
+Deception
+Expendables 
+Unmanned Systems
+EM Intrusion
+
+Protection:
+De-confliction
+Emission Control
+Electromagnetic Masking
+Electromagnetic Security
+
+Support:
+Electromagnetic Reconnaissance
+Threat Warning
+Direction Finding
+
+EW Capabilities are integrated with Cyebr Operations (CO), Electronic Warfare (EW), and SIGINT provided by the MICO company.
+
+# Space Operations
+
+Space operations are operations impacting or directly utilizing space and ground-based capabilities to enhance the potential of the United States and multinational partners. Joint space forces are the space and terrestrial systems, equipment, facilities, organizations, and personnel, or combination thereof, necessary to conduct space operations.
+
+Space Situational Awareness
+Space Control
+Positioning, Navigation, and Timing (PNT)
+Intelligence, Surveillance, Reconnaissance (ISR)
+Satellite Communications
+
+Space Situation Awareness : SSA is the requisite foundational, current, and predictive knowledge and characterization of space objects and the OE upon which space operations depenmd, to include physical, virtual, information, human dimensions, as well as all factors activities, and evcents of all entities conducting, or preparing to conduct space operations.
+
+- Offensive Space Control (OSC)
+- Deceive 
+- Disrupt  
+- Deny 
+- Degrade
+- Destroy
+
+- Defensive Space Control (DSC)
+
+- Navigation Warfare (NAVWAR)
+
+The ground segment also referred to as terrestrial segment. Link segement subspectible to upling and downlink jamming as well as cyberspace attacks. Space segments are vulnerble to ASAT weapons, directed energy weapons, etc.
+
+Space Segment:
+The ability to conduct operations that access exploit and defend space rests on simultaneous action across all domains, but require consideration of the space domains unique physical, network, and cognitive dimensions.
+Physical Dimension
+Network Dimension
+Cognitive Dimension
+ 
+Nation State threat - are potentially the most dangerous due to resource access, personnel and time.
+
+Individual or Small group threats - can illegally disrupt or gain access to systems or facilities
+
+Non-state threats - are formal and informal organizations not bound by national borders
+
+Man made and natural hazards - disruption from human error, industrial incidents and natural disasters.
+
+
+Mission assurance:
+Defensive Operations
+Reconstitution
+Resilience
+Deterrence
+
+
+# Cyber Operations
+
+Cyberspace Operations use Links and nodes located in the physical domain and perform logical functions to create effects first in cyberspace and then as needed in the physical domain.
+
+Operatons in the cyberspace rely on networked, stand-alone
+
+OCO
+DCO
+
+
+DODIN Operation
+Department of Defense Information Network (DODIN)
+
+DODIN Operations mission is to secure configure operate extend maintian and sustaion DOD cyberspace to create and preserve the confidentiality availability and integrity of the DODIN
+
+- DCO-RA Response Action (RED)
+DCO missions where actions are taken external to the defended network or portion of the cyberspace without the permission of the owner
+
+- DCO-IDM Internal Defense Measures (BLUE)
+DCO missions where authorized cyberspace defensive actions occur
+
+- HFO Hunt Forward Operations (GRAY and RED)
+DCO-IDM missions to hunt for threats in gray or red cyberspace, at the invitation of a foreign governement
+
+
+Threat and Challenges to Cyberspace
+Anonymty and Difficulties with Attribution
+Geographic Challenges - There is no stateless manuever space in cyberspace
+Technology Challenges - Cyberspace capabilities rely on the ability to exploit vulnerabilities
+Private Industry and Public Infrastructure - Many of the DoD's critical function rely on contracted
+Glovalization - global operations makes the DoD reliant on foreign vendors for IT services
+Mitigations - DoD partners with the Defense Industry Base (DIB) to increase security
+
+
+OCO misions are intended to project power in and through gray and red cyberspace
+Cyberspace Exploitation - access creation, military intelligence activities, manuever, information collection, and other enabling actions to prepare for future operations
+- ISR - Intelligence, Surveillance & Reconnaissance in Cyberspace
+- C-S&R Cyberspace - Surveilance and Reconnaissance
+
+Cyberspace Attack - actions create noticeable denial effects in cyberspace or manipulation that leads to denial effect in the physical domains
+D4M
+Deny - 
+ - Degrade
+ - Disrupt
+ - Destroy
+Deny encompasses all the following above.
+
+The goal of DCO is to defeat the threat of a specific adversary and/or return a compromised network to a secure and functional state.
+Cyberspace Defense * DEFEAT
+Cyberspace Security * REDUCE
+Cyberspace System Operations
+
+Secure, configure, operate, extend, maintain, and sustain DOD cyberspace and to create and preserve the CIA triad of DODIN.
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
