Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -1,6 +1,5 @@
 # Joint All-Domain Operations (INTRO)
-
-## 5 Operational Domains (Space, Cyber, Air, Land, Sea)
+5 Operational Domains (Space, Cyber, Air, Land, Sea)
 
 Space - Equal to or Greater than 100 Kilometers above the sea level. Airbourne objects become negligible. 
 
@@ -22,17 +21,17 @@ Sea
 
 Integration of all service component and functional component operational structures at local and regional echelons to cordinate and synchronize land, air, maritime, cyber and space operations with ease and to greater extend than currently exist today. Utilizing all domains to gain a physical, psycological, and influence of the operational environment.
 
-## Joint All-Domain Command and Control (JADC2)
+ Joint All-Domain Command and Control (JADC2)
 
-## Multi-Domain Task Force (MDTF)
+ Multi-Domain Task Force (MDTF)
 
-## Multi-Domain Effects Batallion (MDEB)
+ Multi-Domain Effects Batallion (MDEB)
 Provide near real time signals intelligence (SIGINT), geospatial intelligence (GEOINT), and open source (OSINT) target acquisition and products.
 
-## MEF Information Group (MIG)
+ MEF Information Group (MIG)
 Coordinates, integrates, and employs capabilities for information environment operations in order to ensure the Marine Air Ground Task Force MAGTF Commanders ability to facilitate freindly forces.
 
-## Expeditionary Advanced Base Operations (EABO)
+ Expeditionary Advanced Base Operations (EABO)
 A form of expeditionary warfare taht involves the employment of movile, low signature, persistent, and relatively easy to maintain and sustain naval expeditionary forces.
 Stand-In Forces
 Mobility
