Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -17,7 +17,7 @@ Land
 Sea 
 
 
-## Joint All-Domain Ops 
+ Joint All-Domain Ops 
 
 Integration of all service component and functional component operational structures at local and regional echelons to cordinate and synchronize land, air, maritime, cyber and space operations with ease and to greater extend than currently exist today. Utilizing all domains to gain a physical, psycological, and influence of the operational environment.
 
@@ -42,13 +42,13 @@ Cost Effective
 
 
 
-# Joint Operations
-## Why a Joint Force?
+ Joint Operations
+ Why a Joint Force?
 Incapable of coordinating land, sea, and air activities across its two military departments (War and Navy)
 Joint Chiefs of Staff (JCS) created in 1942 
 Franklin D Roosevelt created the JCS by executive direction, primarily to work with the british, who had a combined chiefs of staff organization
 
-## National Security ACT 
+ National Security ACT 
 1947 created the National Military Establishment (DOD Precursor) 
 Prescribed a weak SECDEF
 Gave legal standing to the Joint Chief Staff but NO chairman
@@ -66,11 +66,11 @@ Joint Task Force                                      / Capabilities
 Subordinate Unified Commands   
 
 
-## How did we get here?
+ How did we get here?
 Numerous military failures highlighted institutional deficiencies at ALL levels. The adhoc nature of the joint effort in these operations contributed to an inability to effectively link tactical actions to strategic ends. 
 
 
-## Goldwater-Nichols Act 1986
+ Goldwater-Nichols Act 1986
 IN addition to the impetus provided by these operational failures, several disparate factors came together in the mid 1980s, which enabled DOD organizational changes. These included extensive congressional hearings, a major senate inquiry, bi-partisan, openness to rectify the situation, a presidential commission, and the appointment of a reform-minded CJCS, Admiral William Crowe, in October 1985.
 
 ## Forces
@@ -78,12 +78,12 @@ Global Force Management (GFM) is a group of related processes that establish str
 
 SECDEF assigns allocates and apportions forces to CCDRs for planning to meet current operational requirements, and to accomplish CCDRs.
 
-## Unified Commands
+ Unified Commands
 Joint commmands are asstablished by missions and responsibilities often based on either a geographic AOR or functions
 
 CCDRs forces can operate wherever they are required to accomplish missions
 
-## Geographic Commands
+ Geographic Commands
 AFRICOM
 CENTCOM
 EUCOM
@@ -101,26 +101,26 @@ STRATCOM
 TRANSCOM
 
 
-## Interagency
+ Interagency
 The National Archaives Federal Register list 436(438) Federal Agencies, each with their own culture, processes, tactics, techniques, and procedures.
 
-## The power of IA
+ The power of IA
 
 Title 22 Foreign Relations
 Title 10 Armed Forces
 Title 50 Foreign Intel and Covert Actions
 
-## Joint Operations
+ Joint Operations
 Joint is two or more military department
 Combined is two or more countries 
 
-## Levels of War
+Levels of War
 Strategic
 Operational
 Tactical
 
 
-# Information Environment and Operations 
+ Information Environment and Operations 
 is the aggregate of social cultureal psychological technical and physical factors that affect how humans and automated systems derive meaning from, and act upon, and are impacted by information, including th einfividuals, organizations, and systems that collect, process, disseminate, or use information.
 
 Informational Aspect
@@ -135,23 +135,23 @@ Informational aspects reglect the way that individuals, information systems, and
 Physical aspects are the material characterisics
 
 
-## Operations in the Information Environment (OIE)
+ Operations in the Information Environment (OIE)
 OIE are military actions involving the intergrated employment of mulitple information forces to affect drivers of behavior by informing audiences; influencing foreign relevant actors
 
-## Two Goals
+ Two Goals
 Informational Advantage - The operational advantage gained through the joint forces use of information for decision making and its ability to leverage information to create effects on the IE
 
 Informational Power - The ability to use information to support achievement of objectives and gain an informational advantage
 
 The elevation of information as a joint function impacts all operations and signals a fundamental appreciation for the military role of information at the strategic, operational, and tactical levels within todays complex OE.
 
-## Assessment
+ Assessment
 Assessment of information in joint operations are conducted in accordance with the Operation Assessment Process
 
-## Organizing for OIE
+ Organizing for OIE
 Information forces, the building bl;ocks of OIE units, are those Active Component and Reserve Component forces specifically organized, trained, and equipped to create and/or support the creation of effects on the IE
 
-## Joint Organizations in OIE
+ Joint Organizations in OIE
 JIOWC
 JPSE-PA
 JEWC
@@ -159,24 +159,24 @@ JISE
 JIOC
 DMA
 
-## Interagency in OIE
+ Interagency in OIE
 Effective intregration of the appropriate US government oranizations will enhance the overall sucess of joint force operations. 
 
-## PA
+ PA
 PA organizations and personnel focus on the OIE core activity of informating domestic, international, and internal audiences. External publics include allies, neutrals, adversaries, and potential adversaries
 
-## CMO
+ CMO
 Civil military operations; activities that establish mainitain and influence and exploit relationships between military forces, indigenous populations
 
-## MISO Military information support operations
+MISO Military information support operations
 miso are planned operations to convery selected information and indicator to foreign audiences to influence their emotions, motives, objective reasoning, and ultimately the behavior of foreign gov org groups.
 
-## Military Deceptions
+ Military Deceptions
 Commands conduct MILDEC to mislead enemy decision makers and commanders and cause them to take or not take specific actions.
 
-## Combat Camera (COMCAM)
+ Combat Camera (COMCAM)
 
-## Cyberspace Operations
+ Cyberspace Operations
 CO employ cyberspace capabilities to acheive objectives in or through cyberspace
 
 
