Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -73,7 +73,7 @@ Numerous military failures highlighted institutional deficiencies at ALL levels.
  Goldwater-Nichols Act 1986
 IN addition to the impetus provided by these operational failures, several disparate factors came together in the mid 1980s, which enabled DOD organizational changes. These included extensive congressional hearings, a major senate inquiry, bi-partisan, openness to rectify the situation, a presidential commission, and the appointment of a reform-minded CJCS, Admiral William Crowe, in October 1985.
 
-## Forces
+ Forces
 Global Force Management (GFM) is a group of related processes that establish strategic C2 and strategic posture and provide insight to the global military force avalability based on military plans and operations to support DoDs strategic decisions. GFM integrates directed readiness, assignment, allocation, appointment, and assessment processes for force management and planning constructs. 
 
 SECDEF assigns allocates and apportions forces to CCDRs for planning to meet current operational requirements, and to accomplish CCDRs.
@@ -92,7 +92,7 @@ NORTHCOM
 INDOPACOM
 SOUTHCOM
 
-## Functional Commands
+ Functional Commands
 Can work across the Georgraphical Commands
 
 SOCOM
