Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -344,6 +344,43 @@ Cyberspace System Operations
 Secure, configure, operate, extend, maintain, and sustain DOD cyberspace and to create and preserve the CIA triad of DODIN.
 
 
+# DODIN and DODIN OPs
+DODIN is the base for mission command enables all warfighting functions and is foundational to cyberspace operations underpinning oco and dco functions
+
+mission alignement
+
+USCYBERCOM delegatesw operational executoin of all three mission areas to a subordinate joint force headquarters commanders
+plans coordinates integrates synchonizes and conducts activites to direct the operations and defense
+
+CNF conducts DCOIDM actions on the DODIN when drected by CYBERCOM in coordination with JFHQ DODIN
+
+CCSP
+Centers and Cyber security service provider: support to 160+ global DOD subscribers
+Protect
+Monitor detect anlayse and diagnose
+Respond
+Sustainment
+
+DISN is the core of the DODIN that facilitates the management of information resources and is responsive to national security aas well as DOD needs. DODIN provides DOD owned and leased telecommunications networks undersea and terrestrial transport satellites gateways and multinational coalition information networks subsystems and operation support
+
+DODIN operations to secure configure operate extend maintain and susatin DOD cyberspace to create and preserves that CIA triad of the DODIN
+
+# Cyber Laws and Authorities
+
+LOAC Law of Armed Conflict is made up of customary international law and treaty law
+
+International treaty law is also referred to and considered intarnational humanitarian law (IHL)
+
+Treaty law is comprised of:
+Geneva Law
+Hague Convention
+Developments in Treaty Law
+Chemical Weapons Convention
+
+Though LOAC and LOW are typically considered interchangeable one differnce you may note through international and national doctrine is their associated principles
+
+
+
 
 
 
