Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -379,7 +379,22 @@ Chemical Weapons Convention
 
 Though LOAC and LOW are typically considered interchangeable one differnce you may note through international and national doctrine is their associated principles
 
+Applications of the law of war in all other military operations members of thdod act consistent with th elaw of wars fundamentals principles and rules which included the princisples of military necessity humanity and distinctiion proportionality and honor 
 
+the dod law of war program in conjuction with the dod law of war manual seeks to address the law of war that is applicable to the united states including treaties to which the united states is a party and application of customary international law
+
+
+IHL appl;ies to the belligerent parties irrespective of the reasons for conflict or justness of the cause for which they are fighting IGL is intended to protext victums of armed conflicts regardless of party affiliation that is why jus in bello must remain indepependan t
+
+
+title 10 united states code 
+title 50 USC war and national defense
+title 32 usc national guard
+title 6 domestic security
+title 14 coast guard
+title 18 crimes and criminal procedures
+title 40 public buildings property and works
+title 44 public printing and documents
 
 
 
