Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -1,4 +1,4 @@
-# Joint All-Domain Operations (INTRO)
+# (1) Joint All-Domain Operations (INTRO)
 5 Operational Domains (Space, Cyber, Air, Land, Sea)
 
 Space - Equal to or Greater than 100 Kilometers above the sea level. Airbourne objects become negligible. 
@@ -180,7 +180,7 @@ Commands conduct MILDEC to mislead enemy decision makers and commanders and caus
 CO employ cyberspace capabilities to acheive objectives in or through cyberspace
 
 
-# EMS / EW 
+# (2) EMS / EW 
 
 The electromagnetic spectrum (EMS) is a maneuver space essential for facilitating control within the operational environment (OE) and impacts all portions of OE and military operations.
 
@@ -242,7 +242,7 @@ Direction Finding
 
 EW Capabilities are integrated with Cyebr Operations (CO), Electronic Warfare (EW), and SIGINT provided by the MICO company.
 
-# Space Operations
+# (3) Space Operations
 
 Space operations are operations impacting or directly utilizing space and ground-based capabilities to enhance the potential of the United States and multinational partners. Joint space forces are the space and terrestrial systems, equipment, facilities, organizations, and personnel, or combination thereof, necessary to conduct space operations.
 
@@ -289,7 +289,7 @@ Resilience
 Deterrence
 
 
-# Cyber Operations
+# (4) Cyber Operations
 
 Cyberspace Operations use Links and nodes located in the physical domain and perform logical functions to create effects first in cyberspace and then as needed in the physical domain.
 
@@ -344,7 +344,7 @@ Cyberspace System Operations
 Secure, configure, operate, extend, maintain, and sustain DOD cyberspace and to create and preserve the CIA triad of DODIN.
 
 
-# DODIN and DODIN OPs
+# (5) DODIN and DODIN OPs
 DODIN is the base for mission command enables all warfighting functions and is foundational to cyberspace operations underpinning oco and dco functions
 
 mission alignement
@@ -365,7 +365,7 @@ DISN is the core of the DODIN that facilitates the management of information res
 
 DODIN operations to secure configure operate extend maintain and susatin DOD cyberspace to create and preserves that CIA triad of the DODIN
 
-# Cyber Laws and Authorities
+# (6) Cyber Laws and Authorities
 
 LOAC Law of Armed Conflict is made up of customary international law and treaty law
 
