Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -1,4 +1,4 @@
-# (1) Joint All-Domain Operations (INTRO)
+# (1) Joint All-Domain Operations
 5 Operational Domains (Space, Cyber, Air, Land, Sea)
 
 Space - Equal to or Greater than 100 Kilometers above the sea level. Airbourne objects become negligible. 
