Update 7. Information Warfare.md

--- a/7. Information Warfare.md
+++ b/7. Information Warfare.md
@@ -387,14 +387,22 @@ the dod law of war program in conjuction with the dod law of war manual seeks to
 IHL appl;ies to the belligerent parties irrespective of the reasons for conflict or justness of the cause for which they are fighting IGL is intended to protext victums of armed conflicts regardless of party affiliation that is why jus in bello must remain indepependan t
 
 
-title 10 united states code 
-title 50 USC war and national defense
-title 32 usc national guard
+title 10 united states code  bang bang
+title 50 USC war and national defense intellifence
+title 32 usc national guard 
 title 6 domestic security
 title 14 coast guard
 title 18 crimes and criminal procedures
 title 40 public buildings property and works
 title 44 public printing and documents
+
+SOTA allows USCYBERCOM and the CMD the flexibility and capability to conduct SIGNANT developemnt to meet the demands of current and future mission needs as well as to anticipate and enhance exploitation of current and emerging cyberspace adversareis
+
+
+# Cyber Mission Force
+
+NMTs are prepared to Defend the Nation in response to a foreign hostile actions or an imminent threat in cyberspace
+
 
 
 
