Update (7.) Information Warfare.md

--- a/(7.) Information Warfare.md
+++ b/(7.) Information Warfare.md
@@ -399,7 +399,7 @@ title 44 public printing and documents
 SOTA allows USCYBERCOM and the CMD the flexibility and capability to conduct SIGNANT developemnt to meet the demands of current and future mission needs as well as to anticipate and enhance exploitation of current and emerging cyberspace adversareis
 
 
-# Cyber Mission Force
+# (7) Cyber Mission Force
 
 NMTs are prepared to Defend the Nation in response to a foreign hostile actions or an imminent threat in cyberspace
 
