Update (1.) Python Scripting.md

--- a/(1.) Python Scripting.md
+++ b/(1.) Python Scripting.md
@@ -1,3 +1,14 @@
+@channel, Sgts and SNCO please create your fitreps using the information below. They will be unobserved. Capt Miller will be your RS and Maj Troncoso will be your RO. 
+
+COSC Student FITREP billet Description:
+-Assigned as a student in the Cyber Operations Specialist Course (COSC) XX-XXX.
+
+-The U.S. Army Cyber Operations Specialist Course instruction includes programming, system and network enumeration, network traffic manipulation, cryptography, computer science theory, and exploitation and mitigation of security vulnerabilities. Students are required to think through difficult, multidimensional, real-world scenarios and apply their skills to solve them. Incorporating the Adult Learning Model, COSC nests each lesson in an overarching objective to develop students' ability to problem solve, research and gain and maintain situational understanding of the cyberspace operational environment.
+
+
+
+
+
 
 Net Recon Methodology
 
